<resources>
    <string name="app_name">Trade Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_performance">Performance</string>
    <string name="title_profile">Profile</string>
    <string name="my_invests">My Invests</string>
    <string name="total_value">TOTAL VALUE</string>
    <string name="eur">EUR</string>
    <string name="text_try">TRY</string>
    <string name="usd">USD</string>
    <string name="potential_profit_loss">POTENTIAL P/L</string>
    <string name="real_profit_loss">REAL PROFIT/LOSS</string>
    <string name="history">History</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="loading">Loading…</string>
    <string name="sign_in_or_up">Sign in / Sign up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="wrong_login">E-mail or password is wrong</string>
    <string name="blank_login">You should enter e-mail and password</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="password_dont_match">Passwords don\'t match</string>
    <string name="sign_in_error">An error occur when trying to sign in</string>
    <string name="blank_sign_up">You should enter all places</string>
    <string name="short_password">You should pick a password longer than 5 characters</string>
    <string name="sign_up_error">Authentication failure!</string>
    <string name="from_unit">From Symbol:</string>
    <string name="to_unit">To Symbol:</string>
    <string name="from_amount">From Amount:</string>
    <string name="to_amount">To Amount:</string>
    <string name="currency">Currency:</string>
    <string name="date">Date:</string>
    <string name="commission">Commission:</string>
    <string name="not_valid_number">All numbers should be valid!</string>
    <string name="successful_transaction">Your transaction has been saved successfully</string>
    <string name="db_error">Encountered an error while saving transaction data. Please try again.</string>
    <string name="quantity">Quantity:</string>
    <string name="average_currency">Average Currency</string>
    <string name="fetching_error">Encountered an error while fetching data!</string>
    <string name="select_asset">Select to Sell:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="sell_from_to">%1$s Amount:</string>
    <string name="no_data_on_listing">There is no record to list…</string>
    <string name="blank_field_sell">You should fill at least one amount and currency fields</string>
    <string name="number_format">All numbers should be valid!</string>
    <string name="over_to_amount">You can\'t sell more than you have!</string>
    <string name="unsupported_symbol">Unsupported symbol! Please select from dropdown list.</string>
    <string name="current_p_l">Current P/L:</string>
    <string name="percentage">%1$s\%%</string>
</resources>