<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.safacet.tradetracker.view.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_buyFragment"
            app:destination="@id/buyFragment"
            app:popUpTo="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_home_to_sellFragment"
            app:destination="@id/sellFragment"
            app:popUpTo="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.safacet.tradetracker.view.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/navigation_performance"
        android:name="com.safacet.tradetracker.view.ui.PerformanceFragment"
        android:label="@string/title_performance"
        tools:layout="@layout/performance_fragment" />
    <fragment
        android:id="@+id/buyFragment"
        android:name="com.safacet.tradetracker.view.ui.BuyFragment"
        android:label="buy_fragment"
        tools:layout="@layout/buy_fragment" />
    <fragment
        android:id="@+id/sellFragment"
        android:name="com.safacet.tradetracker.view.ui.SellFragment"
        android:label="sell_fragment"
        tools:layout="@layout/sell_fragment" />

</navigation>