<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.safacet.tradetracker.viewmodel.HomeViewModel" />
    </data>

<androidx.constraintlayout.motion.widget.MotionLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bodyBackground"
    app:layoutDescription="@xml/fragment_home_scene"
    tools:context=".view.ui.HomeFragment">


    <LinearLayout
        android:id="@+id/llDisappearBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/topBarBackground"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lltopBar">

        <LinearLayout
            android:id="@+id/llTopRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_value"
                    android:textColor="@color/topBarTextColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvTotalValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="10.357,48"
                    android:textColor="@color/profitGreen"
                    android:textSize="45sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|end"
                android:layout_weight="0.5"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="center"
                android:src="@drawable/ic_point"
                tools:srcCompat="@drawable/ic_point" />

            <LinearLayout
                android:id="@+id/LLRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvValueCurrencyTop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="right|center_horizontal|fill_vertical"
                    android:onClick="@{() -> viewModel.onBaseCurrencyClicked(viewModel.baseCurrencyTop)}"
                    android:text="@{viewModel.baseCurrencyTop}"
                    android:textColor="@color/topBarTextColor"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tvValueCurrencyMid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_horizontal|fill_vertical"
                    android:text="@{viewModel.baseCurrencySelected}"
                    android:textColor="@color/indicatorBlue"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tvValueCurrencyBottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="right|center_horizontal|fill_vertical"
                    android:onClick="@{() -> viewModel.onBaseCurrencyClicked(viewModel.baseCurrencyBottom)}"
                    android:text="@{viewModel.baseCurrencyBottom}"
                    android:textColor="@color/topBarTextColor"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBottomRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llBottomLeft"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/potential_profit_loss"
                    android:textColor="@color/topBarTextColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvPotantialPL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="5.478,22"
                    android:textColor="@color/profitGreen"
                    android:textSize="35sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBottomRight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/real_profit_loss"
                    android:textColor="@color/topBarTextColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvRealPL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="17.546,28"
                    android:textColor="@color/profitGreen"
                    android:textSize="35sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltopBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/topBarBackground"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ibNegative"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="false"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/sell"
            android:cropToPadding="false"
            android:minWidth="48dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_remove" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_invests"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/ibPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/buy"
            android:focusable="true"
            android:minWidth="48dp"
            android:onClick="@{(v) -> viewModel.onPlusClicked(v)}"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_add" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlHomeTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llDisappearBar"
        app:tabBackground="@color/topBarBackground"
        app:tabIndicatorColor="@color/indicatorBlue"
        app:tabIndicatorGravity="bottom"
        app:tabSelectedTextColor="@color/indicatorBlue"
        app:tabTextColor="@color/topBarTextColor"
        app:selectedTab="@{viewModel.loadRecyclerViewData}">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_invests" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/bodyBackground"
        app:itemViewModel="@{viewModel.data}"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlHomeTab"
        tools:ignore="SpeakableTextPresentCheck"
        tools:listitem="@layout/recycler_view_stock_item" />

</androidx.constraintlayout.motion.widget.MotionLayout>
</layout>